--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -20,12 +20,12 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # up
-  eye: [1., 0., 6.]
-  lookat: [0., 0., 2.]
-  # # front
-  # eye: [4., 0., 4.]
-  # lookat: [0., 0., 1.]
+  # # up
+  # eye: [1., 0., 6.]
+  # lookat: [0., 0., 2.]
+  # front
+  eye: [4., 0., 4.]
+  lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
@@ -34,8 +34,8 @@ wandb:
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
