--- a/cfg/task/HideAndSeek_circle_static.yaml
+++ b/cfg/task/HideAndSeek_circle_static.yaml
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 10
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -21,11 +21,9 @@ action_transform: rate
 num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
-size_min: 1.0
-size_max: 1.0
+arena_size: 1.0
 v_drone: 1.0
-v_low: 1.3
-v_high: 1.3
+v_prey: 1.3
 
 fixed_config: False # if True, only eval max_config
 use_collision: 1
