--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,6 @@
 # cl
-use_cl: 1
+use_cl: 0
+capture_threshold: 0.95
 
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/3agent_debug/02-21_15-45/wandb/run-20240221_154520-9si24h0h/files/checkpoint_640.pt
 model_dir: null
@@ -33,8 +34,8 @@ wandb:
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
