--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -29,8 +29,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: size1_0_vel1_3_catch0_5_cylinder0_fully_observable
-  run_name: 4agent_debug
+  run_name: size1_0_vel1_3_catch0_5_cylinder0_all8_fully_observable_originposdist
+  # run_name: 4agent_debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
