--- a/cfg/task/HideAndSeek_circle_eval.yaml
+++ b/cfg/task/HideAndSeek_circle_eval.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_static
+name: HideAndSeek_circle_eval
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 20
+  num_envs: 1000
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -17,9 +17,15 @@ time_encoding: true
 # action_transform: multidiscrete:4
 action_transform: rate
 
-# cl
-use_cl: 1 # inner cl
+# inner cl
+use_inner_cl: 0
 capture_threshold: 0.95
+
+# outer cl
+use_outer_cl: 1
+
+# evalution scenario
+evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
 # exp
 num_agents: 4
@@ -39,4 +45,4 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  num_active: 8
+  num_active: 0
