--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 20
+  num_envs: 1000
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -23,6 +23,9 @@ capture_threshold: 0.95
 
 # outer cl
 use_outer_cl: 1
+
+# evalution scenario
+evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
 # exp
 num_agents: 4
