--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,5 @@
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/3agent_debug/02-21_15-45/wandb/run-20240221_154520-9si24h0h/files/checkpoint_640.pt
-model_dir: null
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/maskvalue1_cylinder0.pt
+# model_dir: null
 
 # hydra.job.chdir: false
 
@@ -10,35 +10,38 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 200
 save_interval: 200
 seed: 0
 
 viewer:
   resolution: [960, 720]
   # # up
-  # eye: [1., 0., 6.]
+  # eye: [0.1, 0., 6.]
   # lookat: [0., 0., 2.]
-  # front
-  eye: [4., 0., 4.]
+  # debug
+  eye: [0., -4., 4.]
   lookat: [0., 0., 1.]
+  # # front
+  # eye: [4., 0., 4.]
+  # lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
   # run_name: size1_0_vel1_3_catch0_5_cylinder0_all8_fully_observable_originposdist_valuenorm1
-  run_name: 4agent_debug
+  run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
   # - task: HideAndSeek
-  - task: HideAndSeek_circle_static
-  # - task: HideAndSeek_circle_static_UED
+  # - task: HideAndSeek_circle_static
+  - task: HideAndSeek_circle_static_UED
   - algo: mappo
   - _self_
