--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,4 +1,4 @@
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3_fixed1.pt
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed3_final/v1_3_catch0_2_height0_6_size0_6.pt
 # model_dir: null
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: -1
 save_interval: 200
 seed: 0
 
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixed3_v1_3_catch0_2_size0_9
-  # run_name: large_debug
+  # run_name: fixed3_v1_3_catch0_2_size0_9
+  run_name: v2_0_catch0_2_height0_9_size0_9_loadheight0_6
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -46,9 +46,9 @@ defaults:
   # - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
-  # - task: HideAndSeek_circle_static_UED_large_cylinder
+  - task: HideAndSeek_circle_static_UED_large_cylinder
   # - task: HideAndSeek_circle_static_UED_large_cylinder_cl
-  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
   # - task: HideAndSeek_circle_eval_large
   - algo: mappo
