--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -36,7 +36,7 @@ detect_range: -1.0 # -1.0 means fully-observable
 arena_size: 0.9
 max_height: 1.8 # 2 * arena_size
 v_drone: 1.0
-v_prey: 1.3
+v_prey: 2.0
 
 use_collision: 1
 use_speed_penalty: 1
@@ -49,4 +49,4 @@ cylinder:
   num: 5
   max_active: 3
   min_active: 0
-  random_active: False # if False, only train max_active
+  random_active: True # if False, only train max_active
