--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -18,7 +18,7 @@ action_transform: PIDrate
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '2line' # 'empty', 'corner', 'wall', '2line'
+scenario_flag: 'empty' # 'empty', 'corner', 'wall', '2line'
 # '2cylinders', 'center',
 
 # exp
@@ -35,10 +35,10 @@ history_step: 10
 future_predcition_step: 5
 window_step: 1
 
-arena_size: 1.1
+arena_size: 0.9
 max_height: 1.2
 v_drone: 1.0
-v_prey: 1.3
+v_prey: 2.4
 
 dist_reward_coef: 10.0
 catch_reward_coef: 10.0
@@ -55,7 +55,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
+  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
   max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
