--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_8_v1_0_TP_add_dist_mask/08-04_01-13/wandb/run-20240804_011313-iglyim8s/files/checkpoint_327811072.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_3_v1_3_TP_arena0_9/08-06_18-12/wandb/run-20240806_181241-3ii4pa9l/files/checkpoint_799670272.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -18,15 +18,15 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  # eye: [-0.005, 0.0, 5.]
-  # lookat: [0., 0., 1.]
-  eye: [-2.5, 0.0, 2.]
-  lookat: [0., 0.0, 0.1]
+  eye: [-0.005, 0.0, 5.]
+  lookat: [0., 0., 1.]
+  # eye: [-2.5, 0.0, 2.]
+  # lookat: [0., 0.0, 0.1]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: GAN0to5_catch0_3_v1_3_TP
-  # run_name: debug
+  # run_name: GAN0to5_catch0_3_v1_3_TP
+  run_name: empty_catch0_3_v2_4_TP_arena0_9_loadv1_3
   job_type: train
   entity: chenjy
   project: RAL
@@ -39,7 +39,7 @@ wandb:
 defaults:
   # - task: HideAndSeek_square_partial
   # - task: HideAndSeek_circle_partial_woTP
-  # - task: HideAndSeek_circle_partial_TP
-  - task: HideAndSeek_circle_partial_TP_GAN
+  - task: HideAndSeek_circle_partial_TP
+  # - task: HideAndSeek_circle_partial_TP_GAN
   - algo: mappo
   - _self_
